--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "uz.khusinov.ieltslatestquestions"
+        applicationId "uz.khusinov.ieltswritingquestions"
         minSdk 21
         targetSdk 32
         versionCode 1
