--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.3.3'
-    implementation 'com.google.firebase:firebase-analytics-ktx:20.1.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -67,4 +67,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0-alpha01'
     implementation 'com.google.android.gms:play-services-ads:21.5.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+    // admob
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
 }
